tdf#153704: Make sure the last script segment is also added

Change-Id: Id6381d77cdf05c24a1b557206f530f4e004e8e52
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148986
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@aliftype.com>