svx/source/dialog/fntctrl.cxx
@@ -252,7 +252,7 @@ void FontPrevWin_Impl::CheckScript()
         auto aNextScript = aEditEngine.GetScriptType({ 0, i, 0, i });
         if (aNextScript != aScript)
             maScriptChanges.emplace_back(aScript, i - 1);
-        else if (i == maScriptText.getLength())
+        if (i == maScriptText.getLength())
             maScriptChanges.emplace_back(aScript, i);
         aScript = aNextScript;
     }
